--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "tailwindcss": "^3.0.23"
   },
   "dependencies": {
-    "react-responsive-carousel": "^3.2.22"
+    "react-multi-carousel": "^2.8.0"
   }
 }
